# longphase

./: .gitignore  Compare.cpp  Compare.h  CompareProcess.cpp  CompareProcess.h  Dockerfile  Haplotag.cpp  Haplotag.h  HaplotagProcess.cpp  HaplotagProcess.h  Makefile  ModCall.cpp  ModCall.h  ModCallParsingBam.cpp  ModCallParsingBam.h  ModCallProcess.cpp  ModCallProcess.h  ParsingBam.cpp  ParsingBam.h  Phasing.cpp  Phasing.h  PhasingGraph.cpp  PhasingGraph.h  PhasingProcess.cpp  PhasingProcess.h  README.md  Util.cpp  Util.h  config.h  config.h.in  config.h.in~  config.mk  config.mk.in  config.status  configure  configure.ac  main.cpp  old_ModCallParsingBam.cpp  run.sh  setup.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
htslib/: config.h  config.mk  config.status  config_vars.h  configure  htscodecs_bundled.mk  htslib.pc.tmp
htslib/autom4te.cache/: output.0  requests  traces.0  traces.1
htslib/htscodecs/: NEWS
m4/: ax_with_htslib.m4
